--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Build Docker image
         run: docker build -t npsreportscreator:latest .
+
       - name: Save Docker image
         run: docker save npsreportscreator:latest | gzip > npsreportscreator.tar.gz
+
       - name: Create directory on server
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -33,8 +37,9 @@ jobs:
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           port: ${{ secrets.DEPLOY_PORT || 22 }}
           script: |
-            mkdir -p /opt/nps_reports_creator
-            chmod 755 /opt/nps_reports_creator
+            sudo mkdir -p /opt/nps_reports_creator
+            sudo chmod 755 /opt/nps_reports_creator
+
       - name: Copy Docker image to server
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -45,6 +50,7 @@ jobs:
           source: "npsreportscreator.tar.gz"
           target: "/opt/nps_reports_creator/"
           strip_components: 0
+
       - name: Copy requirements to server
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -55,6 +61,7 @@ jobs:
           source: "requirements.txt"
           target: "/opt/nps_reports_creator/"
           strip_components: 0
+
       - name: Copy other necessary files
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -65,6 +72,7 @@ jobs:
           source: "Dockerfile,.dockerignore,docker-compose.yml"
           target: "/opt/nps_reports_creator/"
           strip_components: 0
+
       - name: Deploy and setup on server
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -82,7 +90,7 @@ jobs:
             if [ -z "$PERIOD_END" ]; then
               PERIOD_END="${{ secrets.PERIOD_END || '' }}"
             fi
-            cat > .env << EOF
+            sudo bash -c "cat > /opt/nps_reports_creator/.env" << EOF
             NPS_DB_HOST=${{ secrets.NPS_DB_HOST || '127.0.0.1' }}
             NPS_DB_PORT=${{ secrets.NPS_DB_PORT || '5432' }}
             NPS_DB_NAME=${{ secrets.NPS_DB_NAME || 'nps' }}
@@ -99,76 +107,67 @@ jobs:
             BITRIX_TOKEN=${{ secrets.BITRIX_TOKEN }}
             BITRIX_USER_ID=${{ secrets.BITRIX_USER_ID || '163472' }}
             EOF
+            sudo chown $USER:$USER /opt/nps_reports_creator/.env
 
-            docker load < npsreportscreator.tar.gz
-            docker stop NPSReportsCreator 2>/dev/null || true
-            docker rm NPSReportsCreator 2>/dev/null || true
-
-            docker stop my-app 2>/dev/null || true
-            docker rm my-app 2>/dev/null || true
-
+            sudo docker load < npsreportscreator.tar.gz
+            sudo docker stop NPSReportsCreator 2>/dev/null || true
+            sudo docker rm NPSReportsCreator 2>/dev/null || true
+            sudo docker stop my-app 2>/dev/null || true
+            sudo docker rm my-app 2>/dev/null || true
             echo "Starting container with period: $PERIOD_START to $PERIOD_END"
-            docker run -d --name NPSReportsCreator --env-file .env npsreportscreator:latest
+            sudo docker run -d --name NPSReportsCreator --env-file .env npsreportscreator:latest
             sleep 10
-            if ! docker ps | grep -q NPSReportsCreator; then
+            if ! sudo docker ps | grep -q NPSReportsCreator; then
               echo "ERROR: Container is not running"
-              docker logs NPSReportsCreator --tail 50 2>/dev/null || echo "Cannot get logs"
+              sudo docker logs NPSReportsCreator --tail 50 2>/dev/null || echo "Cannot get logs"
               exit 1
             fi
             echo "Container logs (last 30 lines):"
-            docker logs NPSReportsCreator --tail 30
-            CONTAINER_STATUS=$(docker inspect NPSReportsCreator --format='{{.State.Status}}')
+            sudo docker logs NPSReportsCreator --tail 30
+            CONTAINER_STATUS=$(sudo docker inspect NPSReportsCreator --format='{{.State.Status}}')
             echo "Container status: $CONTAINER_STATUS"
             if [ "$CONTAINER_STATUS" = "exited" ]; then
-              EXIT_CODE=$(docker inspect NPSReportsCreator --format='{{.State.ExitCode}}')
+              EXIT_CODE=$(sudo docker inspect NPSReportsCreator --format='{{.State.ExitCode}}')
               if [ "$EXIT_CODE" -eq 0 ]; then
                 echo "Container completed successfully with exit code: $EXIT_CODE"
               else
                 echo "ERROR: Container exited with code: $EXIT_CODE"
-                docker logs NPSReportsCreator --tail 100
+                sudo docker logs NPSReportsCreator --tail 100
                 exit 1
               fi
             fi
-
             echo "Setting up cron job..."
-
-            cat > /opt/nps_reports_creator/run_nps_report.sh << 'SCRIPT_EOF'
+            sudo bash -c "cat > /opt/nps_reports_creator/run_nps_report.sh" << 'SCRIPT_EOF'
             #!/bin/bash
             cd /opt/nps_reports_creator
-
             # Определяем даты: с 1 числа месяца по вчерашний день
             PERIOD_START=$(date +%Y-%m-01)
             PERIOD_END=$(date -d "yesterday" +%Y-%m-%d)
-
             # Удаляем старый контейнер, если вдруг "завис"
-            docker rm -f NPSReportsCreator_cron 2>/dev/null || true
-
+            sudo docker rm -f NPSReportsCreator_cron 2>/dev/null || true
             # Передаём даты как переменные окружения в контейнер
-            docker run --name NPSReportsCreator_cron --env-file .env \
+            sudo docker run --name NPSReportsCreator_cron --env-file .env \
               -e PERIOD_START=$PERIOD_START \
               -e PERIOD_END=$PERIOD_END \
               --rm \
               npsreportscreator:latest
-
-            echo "[$(date)] NPS report generated for period: $PERIOD_START to $PERIOD_END" >> /var/log/nps_reports.log
+            echo "[$(date)] NPS report generated for period: $PERIOD_START to $PERIOD_END" | sudo tee -a /var/log/nps_reports.log
             SCRIPT_EOF
+            sudo chmod +x /opt/nps_reports_creator/run_nps_report.sh
 
-            chmod +x /opt/nps_reports_creator/run_nps_report.sh
-
-            (crontab -l 2>/dev/null | grep -v "run_nps_report.sh") | crontab -
-            (crontab -l 2>/dev/null; echo "0 3 1 * * /opt/nps_reports_creator/run_nps_report.sh >> /var/log/nps_reports_cron.log 2>&1") | crontab -
+            (sudo crontab -l 2>/dev/null | grep -v "run_nps_report.sh") | sudo crontab -
+            (sudo crontab -l 2>/dev/null; echo "0 3 1 * * /opt/nps_reports_creator/run_nps_report.sh >> /var/log/nps_reports_cron.log 2>&1") | sudo crontab -
             # тестовый запуск каждые 5 минут — УДАЛИТЕ/ЗАКОММЕНТИРУЙТЕ В ПРОДАКШНЕ!
-            #(crontab -l 2>/dev/null; echo "*/5 * * * * /opt/nps_reports_creator/run_nps_report.sh >> /var/log/nps_reports_test.log 2>&1") | crontab -
+            #(sudo crontab -l 2>/dev/null; echo "*/5 * * * * /opt/nps_reports_creator/run_nps_report.sh >> /var/log/nps_reports_test.log 2>&1") | sudo crontab -
 
             echo "Cron jobs installed:"
-            crontab -l
+            sudo crontab -l
 
             echo "Cleaning up old Docker images..."
-            docker images npsreportscreator --format "{{.ID}}" | tail -n +4 | xargs -r docker rmi 2>/dev/null || true
-
-            rm -f npsreportscreator.tar.gz
-
+            sudo docker images npsreportscreator --format "{{.ID}}" | tail -n +4 | xargs -r sudo docker rmi 2>/dev/null || true
+            sudo rm -f npsreportscreator.tar.gz
             echo "Deployment and cron setup successful!"
+
       - name: Cleanup local files
         if: always()
         run: rm -f npsreportscreator.tar.gz
