--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,53 +37,18 @@ jobs:
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           port: ${{ secrets.DEPLOY_PORT || 22 }}
           script: |
-            sudo mkdir -p /opt/nps_reports_creator
-            sudo chown $USER:$USER /opt/nps_reports_creator
-            sudo chmod 755 /opt/nps_reports_creator
+            mkdir -p /opt/nps_reports_creator
+            chmod 755 /opt/nps_reports_creator
 
-      - name: Copy Docker image to server
+      - name: Copy files to server
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.DEPLOY_HOST }}
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           port: ${{ secrets.DEPLOY_PORT || 22 }}
-          source: "npsreportscreator.tar.gz"
-          target: "~/"
-          strip_components: 0
-          overwrite: true
-
-      - name: Move Docker image to target directory
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_SSH_KEY }}
-          port: ${{ secrets.DEPLOY_PORT || 22 }}
-          script: |
-            sudo mv ~/npsreportscreator.tar.gz /opt/nps_reports_creator/
-            sudo chown $USER:$USER /opt/nps_reports_creator/npsreportscreator.tar.gz
-
-      - name: Copy requirements to server
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_SSH_KEY }}
-          port: ${{ secrets.DEPLOY_PORT || 22 }}
-          source: "requirements.txt"
-          target: "/opt/nps_reports_creator/"
-          strip_components: 0
-
-      - name: Copy other necessary files
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_SSH_KEY }}
-          port: ${{ secrets.DEPLOY_PORT || 22 }}
-          source: "Dockerfile,.dockerignore,docker-compose.yml"
-          target: "/opt/nps_reports_creator/"
+          source: "npsreportscreator.tar.gz,requirements.txt,Dockerfile"
+          target: "/opt/nps_reports_creator"
           strip_components: 0
 
       - name: Deploy and setup on server
@@ -103,7 +68,8 @@ jobs:
             if [ -z "$PERIOD_END" ]; then
               PERIOD_END="${{ secrets.PERIOD_END || '' }}"
             fi
-            sudo bash -c "cat > /opt/nps_reports_creator/.env" << EOF
+            # Создаем .env файл
+            cat > .env << EOF
             NPS_DB_HOST=${{ secrets.NPS_DB_HOST || '127.0.0.1' }}
             NPS_DB_PORT=${{ secrets.NPS_DB_PORT || '5432' }}
             NPS_DB_NAME=${{ secrets.NPS_DB_NAME || 'nps' }}
@@ -120,7 +86,6 @@ jobs:
             BITRIX_TOKEN=${{ secrets.BITRIX_TOKEN }}
             BITRIX_USER_ID=${{ secrets.BITRIX_USER_ID || '163472' }}
             EOF
-            sudo chown $USER:$USER /opt/nps_reports_creator/.env
 
             sudo docker load < npsreportscreator.tar.gz
             sudo docker stop NPSReportsCreator 2>/dev/null || true
@@ -155,7 +120,7 @@ jobs:
             fi
             
             echo "Setting up cron job..."
-            sudo bash -c "cat > /opt/nps_reports_creator/run_nps_report.sh" << 'SCRIPT_EOF'
+            cat > run_nps_report.sh << 'SCRIPT_EOF'
             #!/bin/bash
             cd /opt/nps_reports_creator
             
@@ -173,7 +138,7 @@ jobs:
               npsreportscreator:latest
             echo "[$(date)] NPS report generated for period: $PERIOD_START to $PERIOD_END" | sudo tee -a /var/log/nps_reports.log
             SCRIPT_EOF
-            sudo chmod +x /opt/nps_reports_creator/run_nps_report.sh
+            chmod +x run_nps_report.sh
 
             (sudo crontab -l 2>/dev/null | grep -v "run_nps_report.sh") | sudo crontab -
             (sudo crontab -l 2>/dev/null; echo "0 3 1 * * /opt/nps_reports_creator/run_nps_report.sh >> /var/log/nps_reports_cron.log 2>&1") | sudo crontab -
@@ -185,7 +150,7 @@ jobs:
 
             echo "Cleaning up old Docker images..."
             sudo docker images npsreportscreator --format "{{.ID}}" | tail -n +4 | xargs -r sudo docker rmi 2>/dev/null || true
-            sudo rm -f npsreportscreator.tar.gz
+            rm -f npsreportscreator.tar.gz
             echo "Deployment and cron setup successful!"
 
       - name: Cleanup local files
